# ai-bots

./: .env.example  .gitignore  Dockerfile  README.md  app.py  bot_management.py  botpage.py  docker-compose.yml  pyproject.toml
.github/prompts/: given-when-then.prompt.md
.github/workflows/: main.yml
docs/prompts/: ba.md  dev.md  tl.md
docs/stories/persist-bot-sessions/: requirements.md  tasks.md
st_copy_to_clipboard/frontend/: main.js  style.css
tests/: conftest.py  test_botpage.py
