[tool.poetry]
name = "ai-bots"
version = "0.1.0"
description = ""
authors = ["sjmyuan <shang.jiaming@163.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "1.43.2"
openai = "^1.50.2"
streamlit-authenticator = "^0.4.1"
pymongo = "^4.11.2"
trafilatura = "^1.8.0"
markdownify = "^1.1.0"
beautifulsoup4 = "^4.13.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
